samples/task/invalid/R12.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <context>This is direct text in context.</context>
    <steps><step><cmd/></step></steps>
  </taskbody>
</task>